@@ -75,6 +75,10 @@
     <a href="https://trac.cyberduck.io/milestone/6.3.6"><strong>Version 6.3.6</strong></a>
 </p>
 <ul>
+    <li><span class="label label-success">Feature</span> Support for eu-west-3 (Paris) region (S3)</li>
+    <li><span class="label label-success">Feature</span> Support for Integrated Windows Authentication (IWA)
+        authentication (WebDAV, Windows)
+    </li>
     <li><span class="label label-warning">Bugfix</span> Support for Oracle Cloud Infrastructure (OCI) Object Storage
         (S3) (<a
             href="https://trac.cyberduck.io/ticket/10194">#10194</a>)
@@ -85,6 +89,9 @@
     </li>
     <li><span class="label label-warning">Bugfix</span> Application freezes for long time when selecting many files for
         upload (Windows)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Set modification date on uploaded files (OneDrive) (<a
+        href="https://trac.cyberduck.io/ticket/10171">#10171</a>)
     </li>
 </ul>
 
