@@ -2,9 +2,12 @@ Cyberduck
 https://cyberduck.io/
 
 6.3.6
+- [Feature] Support for eu-west-3 (Paris) region (S3)
+- [Feature] Support for Integrated Windows Authentication (IWA) authentication (WebDAV, Windows)
 - [Bugfix] Support for Oracle Cloud Infrastructure (OCI) Object Storage (S3) (#10194)
 - [Bugfix] Do not save passphrase for vaults by defaults (Cryptomator, Windows)
 - [Bugfix] Application freezes for long time when selecting many files for upload (Windows)
+- [Bugfix] Set modification date on uploaded files (OneDrive) (#10171)
 
 6.3.5
 - [Bugfix] Crash on launch in update checker (Windows)
